[package]
name = "do-proxy"
version = "0.1.1"
edition = "2021"
authors = ["Fisher Darling <fisher@darling.dev>"]
repository = "https://github.com/fisherdarling/do-proxy"
license = "MIT"
description = """
A library for writing type-safe Durable Objects in Rust.
"""
readme = "../README.md"
categories = ["wasm", "web-programming"]
keywords = ["durable-objects", "cloudflare", "workers"]

[dependencies]
async-trait = { workspace = true }
paste = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
worker = { workspace = true }